# opna_2

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  main.cpp
docs/: opna_2.tex  sample.bib
